--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+annotated-types==0.7.0
+cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 faiss-cpu==1.10.0
 filelock==3.17.0
 fsspec==2025.2.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.161.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.68.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+httplib2==0.22.0
 huggingface-hub==0.29.1
 idna==3.10
 Jinja2==3.1.5
@@ -13,9 +25,17 @@ networkx==3.2.1
 numpy==2.0.2
 packaging==24.2
 pillow==11.1.0
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.6
+pydantic_core==2.27.2
+pyparsing==3.2.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
+rsa==4.9
 safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.13.1
@@ -27,4 +47,5 @@ torch==2.6.0
 tqdm==4.67.1
 transformers==4.49.0
 typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.3.0
